created new folder, moved in-season update files

--- a/in-season/northern_smolts_inseason.Rmd
+++ b/in-season/northern_smolts_inseason.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "**Northern sockeye smolt programs  \nIn-season update #5**"
+title: "**Northern sockeye smolt programs  \nIn-season update #6**"
 author: "Fraser Interior Area Sockeye Stock Assessment"
 date: "`r Sys.Date()`"
 output: 
@@ -11,10 +11,10 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
-library(xlsx)
+#library(xlsx)
 library(openxlsx)
-library(egg)    # for ggarrange()
-library(chron)  # for times() (not used)
+library(egg)                  # for ggarrange()
+library(chron)                # for times() (not used)
 #library(tinytex)
 #tinytex::install_tinytex()   # for knit to pdf
 
@@ -243,13 +243,13 @@ Water temperatures are relatively consistent in the Stellako River, on average `
 enviro_plot(stellako.enviro, 0.1)
 ```
 
-*Figure 1. Water temperature (degrees Celcius) and level (meters) in the Stellako River from `r format(min(stellako.enviro$date_opened), "%b %d")` to `r format(max(stellako.enviro$date_opened), "%b %d")`, 2021. Water level data obtained from real-time Environment Canada water data online. The decline on April 27 is likely an effect of Francois Lake buffering the water gauge reading, which is at the top of the Stellako River near Glenannan. *
+*Figure 1. Water temperature (degrees Celcius) and level (meters) in the Stellako River from `r format(min(stellako.enviro$date_closed), "%b %d")` to `r format(max(stellako.enviro$date_closed), "%b %d")`, 2021. Water level data obtained from real-time Environment Canada water data online. The decline on April 27 is likely an effect of Francois Lake buffering the water gauge reading, which is at the top of the Stellako River near Glenannan. *
 
 \newpage
 
 **Abundance and migration timing**
 
-Catches have remained relatively high at Stellako as we approach the anticipated migration period around early-mid May (Figure 2a). Variability in hourly catch is still high, but so far suggests that smolts migrate later in the night at Stellako than at Nadleh (Figure 2b). 
+Catches have declined at Stellako which suggests we may be nearing the end of migration (Figure 2a). Variability in hourly catch is still high, but so far suggests that smolts migrate later in the night at Stellako than at Nadleh (Figure 2b). 
 
 ```{r, warning=F, message=F, echo=F}
 ggarrange(nightly_plot(stellako.catch, 300, 50), hourly_plot(stellako.catch), nrow=2)
@@ -275,7 +275,7 @@ Mark-recapture trials to evaluate trap efficiency have begun at Stellako (Table 
 
 *Table 1. Mark-release cohorts released in the Stellako River*
 ```{r, echo=F, warning=F, message=F}
-stella.releases <- data.frame(Date=c("May 5"), cohort_size=c(114), mark_type=c("Upper caudal clip"))
+stella.releases <- data.frame(Date=c("May 5", "May 9"), cohort_size=c(114, 100), mark_type=c("Upper caudal clip"))
 stella.releases <- stella.releases %>%
   rename(`Cohort size`=cohort_size,
          `Mark type`=mark_type)
@@ -302,16 +302,16 @@ The Nadleh program is using an 8' RST located at the Nadleh bridge, about half-w
 Water temperatures are increasing steadily in the Nadleh River, on average `r round(mean(nadleh.enviro$water_temp_C,na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$water_temp_C,na.rm=T),1)` &deg;C, as are air temperatures (`r round(mean(nadleh.enviro$air_temp_C,na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$air_temp_C,na.rm=T),1)` &deg;C). Water levels have also increased (average of `r round(mean(nadleh.enviro$water_gauge_m, na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$water_gauge_m,na.rm=T),2)` m, Figure 3). Debris flows (branches, etc.) have increased recently, frequently clogging the RST and impacting fishing operations.  
 
 ```{r, message=F, echo=F, warning=F}
-enviro_plot(nadleh.enviro, 0.1)
+enviro_plot(nadleh.enviro, 0.08)
 ```
 
-*Figure 3. Water temperature (degrees Celcius) and level (meters) in the Nadleh River from `r format(min(nadleh.enviro$date_opened), "%b %d")` to `r format(max(nadleh.enviro$date_opened), "%b %d")`, 2021. Water level data obtained from real-time Environment Canada water data online.*
+*Figure 3. Water temperature (degrees Celcius) and level (meters) in the Nadleh River from `r format(min(nadleh.enviro$date_closed), "%b %d")` to `r format(max(nadleh.enviro$date_closed), "%b %d")`, 2021. Water level data obtained from real-time Environment Canada water data online.*
 
 \newpage
 
 **Abundance and migration timing**
 
-Catches have levelled-off at Nadleh as we have now passed the latest anticipated peak of migration, early-mid May (Figure 4a). Peak nightly migration appears to be between 10pm and 1am, as it has been historically (Figure 4b). 
+Catches seem to have begun to decline at Nadleh which suggests we may be nearing the end of the migration period (Figure 4a). Peak nightly migration appears to be between 10pm and 1am, as it has been historically (Figure 4b). 
 
 ```{r, warning=F, message=F, echo=F}
 ggarrange(nightly_plot(nadleh.catch, 7000, 1000), hourly_plot(nadleh.catch), nrow=2)
@@ -337,7 +337,7 @@ Mark-recapture trials to evaluate trap efficiency have begun at Nadleh and will 
 
 *Table 2. Mark-release cohorts released in the Nadleh River*
 ```{r, echo=F, warning=F, message=F}
-nadleh.releases <- data.frame(Date=c("April 28", "May 1"), cohort_size=c(421, 1220), mark_type="Lower caudal clip")
+nadleh.releases <- data.frame(Date=c("April 28", "May 1", "May 10"), cohort_size=c(421, 1220, 546), mark_type="Lower caudal clip")
 nadleh.releases <- nadleh.releases %>%
   rename(`Cohort size`=cohort_size,
          `Mark type`=mark_type)
@@ -355,7 +355,7 @@ knitr::kable(nadleh.releases)
 
 &nbsp;
 
-Next update will be: `r Sys.Date()+7`
+Next update will be: `r Sys.Date()+4`
 
 ```{r echo=F, warning=F, message=F, include=F}
 #*Table 1. Stellako River a) raw nightly sockeye smolt catch. Dates are based on the day the trap was closed for fishing. b) Raw hourly abundance of sockeye #smolts. Times are based on when fish were netted out of the RST live box.*
@@ -394,7 +394,7 @@ writeData(northern_wb, sheet="Stellako hourly", x=stellako.hourly.summary)
 writeData(northern_wb, sheet="Nadleh nightly", x=nadleh.nightly.summary)
 writeData(northern_wb, sheet="Nadleh hourly", x=nadleh.hourly.summary)
 
-saveWorkbook(northern_wb, "Northern sockeye smolt programs 2021 - In-season data update #5.xlsx", overwrite = T)
+saveWorkbook(northern_wb, "Northern sockeye smolt programs 2021 - In-season data update #6.xlsx", overwrite = T)
 ```
 
 
