--- a/in-season/northern_smolts_inseason.Rmd
+++ b/in-season/northern_smolts_inseason.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "**Northern sockeye smolt programs  \nIn-season update #6**"
+title: "**Northern sockeye smolt programs  \nIn-season update #7**"
 author: "Fraser Interior Area Sockeye Stock Assessment"
 date: "`r Sys.Date()`"
 output: 
@@ -237,7 +237,7 @@ The Stellako site is using a 6' Rotary Screw Trap (RST) located in the lower por
 
 **Environmentals**
 
-Water temperatures are relatively consistent in the Stellako River, on average `r round(mean(stellako.enviro$water_temp_C,na.rm=T),1)`&pm;`r round(sd(stellako.enviro$water_temp_C,na.rm=T),1)` &deg;C (Figure 1), as are air temperatures (`r round(mean(stellako.enviro$air_temp_C,na.rm=T),1)`&pm;`r round(sd(stellako.enviro$air_temp_C,na.rm=T),1)` &deg;C). Water levels have increased considerably since RST install (average of `r round(mean(stellako.enviro$water_gauge_m, na.rm=T),1)`&pm;`r round(sd(stellako.enviro$water_gauge_m,na.rm=T),2)` m; Figure 1), resulting in flooding of most of the lower river channels and significant debris movement which has moved the RST position. 
+Water temperatures are increasing gradually in the Stellako River, on average `r round(mean(stellako.enviro$water_temp_C,na.rm=T),1)`&pm;`r round(sd(stellako.enviro$water_temp_C,na.rm=T),1)` &deg;C (Figure 1), as are air temperatures (`r round(mean(stellako.enviro$air_temp_C,na.rm=T),1)`&pm;`r round(sd(stellako.enviro$air_temp_C,na.rm=T),1)` &deg;C). Water levels have increased considerably since RST install (average of `r round(mean(stellako.enviro$water_gauge_m, na.rm=T),1)`&pm;`r round(sd(stellako.enviro$water_gauge_m,na.rm=T),2)` m; Figure 1), but have plateaued recently. 
 
 ```{r, message=F, echo=F, warning=F}
 enviro_plot(stellako.enviro, 0.1)
@@ -249,10 +249,10 @@ enviro_plot(stellako.enviro, 0.1)
 
 **Abundance and migration timing**
 
-Catches have declined at Stellako which suggests we may be nearing the end of migration (Figure 2a). Variability in hourly catch is still high, but so far suggests that smolts migrate later in the night at Stellako than at Nadleh (Figure 2b). 
+Catches increased briefly at Stellako followed by very low abundances which suggests we may be nearing the end of migration (Figure 2a). Variability in hourly catch is still high, but so far suggests that smolts migrate later in the night at Stellako than at Nadleh (Figure 2b). 
 
 ```{r, warning=F, message=F, echo=F}
-ggarrange(nightly_plot(stellako.catch, 300, 50), hourly_plot(stellako.catch), nrow=2)
+ggarrange(nightly_plot(stellako.catch, 400, 50), hourly_plot(stellako.catch), nrow=2)
 ```
 
 *Figure 2. Stellako River a) total nightly sockeye smolt catch over time, not corrected for effort. b) Sub-sample of the proportion of sockeye smolts composing each hourly catch averaged across days fished (`r format(min(stellako.catch$date_closed), "%b %d")` - `r format(max(stellako.catch$date_closed), "%b %d")`, 2021). Shading represents standard deviation. Catch times are given based on when smolts were removed from the RST live box. Dates are given based on when the RST was closed.*
@@ -263,7 +263,7 @@ ggarrange(nightly_plot(stellako.catch, 300, 50), hourly_plot(stellako.catch), nr
 
 **Biological data**
 
-Smolts encountered at the Stellako River site are getting larger, on average `r round(mean(stellako.bio.raw$length_mm,na.rm=T),1)`&pm;`r round(sd(stellako.bio.raw$length_mm, na.rm=T),1)` mm and `r round(mean(stellako.bio.raw$weight_g,na.rm=T),1)`&pm;`r round(sd(stellako.bio.raw$weight_g,na.rm=T),1)` g. 
+Smolts encountered at the Stellako River site are large, on average `r round(mean(stellako.bio.raw$length_mm,na.rm=T),1)`&pm;`r round(sd(stellako.bio.raw$length_mm, na.rm=T),1)` mm and `r round(mean(stellako.bio.raw$weight_g,na.rm=T),1)`&pm;`r round(sd(stellako.bio.raw$weight_g,na.rm=T),1)` g. 
 
 \newpage
 
@@ -275,7 +275,7 @@ Mark-recapture trials to evaluate trap efficiency have begun at Stellako (Table 
 
 *Table 1. Mark-release cohorts released in the Stellako River*
 ```{r, echo=F, warning=F, message=F}
-stella.releases <- data.frame(Date=c("May 5", "May 9"), cohort_size=c(114, 100), mark_type=c("Upper caudal clip"))
+stella.releases <- data.frame(Date=c("May 5", "May 9", "May 14"), cohort_size=c(114, 100, 201), mark_type=c("Upper caudal clip"))
 stella.releases <- stella.releases %>%
   rename(`Cohort size`=cohort_size,
          `Mark type`=mark_type)
@@ -299,7 +299,7 @@ The Nadleh program is using an 8' RST located at the Nadleh bridge, about half-w
 
 **Environmentals**
 
-Water temperatures are increasing steadily in the Nadleh River, on average `r round(mean(nadleh.enviro$water_temp_C,na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$water_temp_C,na.rm=T),1)` &deg;C, as are air temperatures (`r round(mean(nadleh.enviro$air_temp_C,na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$air_temp_C,na.rm=T),1)` &deg;C). Water levels have also increased (average of `r round(mean(nadleh.enviro$water_gauge_m, na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$water_gauge_m,na.rm=T),2)` m, Figure 3). Debris flows (branches, etc.) have increased recently, frequently clogging the RST and impacting fishing operations.  
+Water temperatures are still increasing steadily in the Nadleh River, on average `r round(mean(nadleh.enviro$water_temp_C,na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$water_temp_C,na.rm=T),1)` &deg;C, as are air temperatures (`r round(mean(nadleh.enviro$air_temp_C,na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$air_temp_C,na.rm=T),1)` &deg;C). Water levels have also increased since install (average of `r round(mean(nadleh.enviro$water_gauge_m, na.rm=T),1)`&pm;`r round(sd(nadleh.enviro$water_gauge_m,na.rm=T),2)` m, Figure 3), but have plateaued recently. 
 
 ```{r, message=F, echo=F, warning=F}
 enviro_plot(nadleh.enviro, 0.08)
@@ -311,7 +311,7 @@ enviro_plot(nadleh.enviro, 0.08)
 
 **Abundance and migration timing**
 
-Catches seem to have begun to decline at Nadleh which suggests we may be nearing the end of the migration period (Figure 4a). Peak nightly migration appears to be between 10pm and 1am, as it has been historically (Figure 4b). 
+Catches continue to remain relatively low at Nadleh which suggests we may be nearing the end of the migration period (Figure 4a). Peak nightly migration appears to be between 10pm and 1am, as it has been historically (Figure 4b). 
 
 ```{r, warning=F, message=F, echo=F}
 ggarrange(nightly_plot(nadleh.catch, 7000, 1000), hourly_plot(nadleh.catch), nrow=2)
@@ -355,7 +355,7 @@ knitr::kable(nadleh.releases)
 
 &nbsp;
 
-Next update will be: `r Sys.Date()+4`
+Next update will be: `r Sys.Date()+3`
 
 ```{r echo=F, warning=F, message=F, include=F}
 #*Table 1. Stellako River a) raw nightly sockeye smolt catch. Dates are based on the day the trap was closed for fishing. b) Raw hourly abundance of sockeye #smolts. Times are based on when fish were netted out of the RST live box.*
@@ -394,7 +394,7 @@ writeData(northern_wb, sheet="Stellako hourly", x=stellako.hourly.summary)
 writeData(northern_wb, sheet="Nadleh nightly", x=nadleh.nightly.summary)
 writeData(northern_wb, sheet="Nadleh hourly", x=nadleh.hourly.summary)
 
-saveWorkbook(northern_wb, "Northern sockeye smolt programs 2021 - In-season data update #6.xlsx", overwrite = T)
+saveWorkbook(northern_wb, "Northern sockeye smolt programs 2021 - In-season data update #7.xlsx", overwrite = T)
 ```
 
 
